methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while (estSurBiscuit==false)
  avance()
	
}